--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <project.encoding>UTF-8</project.encoding>
 
         <kotlin.version>1.3.11</kotlin.version>
+        <antlr.version>4.7.1</antlr.version>
     </properties>
 
     <build>
@@ -66,6 +67,18 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.antlr</groupId>
+                <artifactId>antlr4-maven-plugin</artifactId>
+                <version>${antlr.version}</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>antlr4</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
@@ -79,6 +92,11 @@
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-stdlib-jdk8</artifactId>
             <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.antlr</groupId>
+            <artifactId>antlr4</artifactId>
+            <version>${antlr.version}</version>
         </dependency>
     </dependencies>
 
