--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
         <kotlin.version>1.3.11</kotlin.version>
         <antlr.version>4.7.1</antlr.version>
         <jackson.version>2.9.3</jackson.version>
+        <commons.version>1.3.2</commons.version>
     </properties>
 
     <build>
@@ -44,7 +45,7 @@
                     <archive>
                         <manifest>
                             <addClasspath>true</addClasspath>
-                            <mainClass>ru.ifmo.ctddev.verification.verifier.Main</mainClass>
+                            <mainClass>ru.ifmo.ctddev.verification.verifier.MainKt</mainClass>
                         </manifest>
                     </archive>
                     <descriptorRefs>
@@ -67,6 +68,12 @@
                         </goals>
                     </execution>
                 </executions>
+                <configuration>
+                    <sourceDirs>
+                        <sourceDir>${project.basedir}/src/main/java</sourceDir>
+                        <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                    </sourceDirs>
+                </configuration>
             </plugin>
         </plugins>
     </build>
@@ -101,6 +108,11 @@
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-xml</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons.version}</version>
         </dependency>
     </dependencies>
 
